# cosmic-cli

./: .coverage  .gitignore  .zenodo.json  CITATION.cff  COSMIC.md  COSMIC_SETUP.md  LICENSING.md  NOTICE  PAUSE_EXPERIMENT_2026-07-14.md  PLAN_2026-07-14.md  PRIVILEGE_RANKING.md  README.md  check_agents_path.py  cosmic  cosmic_launcher.sh  pyproject.toml  pytest.ini  requirements.txt  sandbox.toml  setup.py  setup_github.sh  test_api.py  test_imports_exports.py
.github/workflows/: ci.yml
_archive/: README.md
_archive/2026-07-14/: AUDIT_2026-07-14.md  PAUSE_EXPERIMENT_2026-07-14.md  PLAN_2026-07-14.md
_archive/consciousness/: CONSCIOUSNESS_AWARE_PERSONALITIES.md  CONSCIOUSNESS_RESEARCH.md
_archive/consciousness/consciousness/: __init__.py
_archive/consciousness/test_packages/behavioral/: __init__.py
_archive/demos/: demo.py  demo_consciousness_ui.py  demo_cosmic_cli.py
_archive/docs/: CONSCIOUSNESS_METRICS_GUIDE.md
_archive/examples/: consciousness_monitoring_examples.py
_archive/legacy_consciousness/: consciousness_demo.py
_archive/legacy_tests/: test_consciousness_emergence_scenarios.py  test_consciousness_personalities.py  test_enhanced_input.py  test_stargazer_agent_integration.py
_archive/plugins/package/: __init__.py  base.py  file_operations.py
_archive/scratch/: test_imports_exports.py  verify_parse_steps.py
cosmic-cli/cosmic_cli/: consciousness_assessment_README.md
cosmic_cli/: __init__.py  action_bind.py  agents.py  agents.py.bak  boot_canary.py  buildinfo.py  checkpoint.py  consciousness_assessment.py  context.py  dashboard.py  enhanced_agents.py  enhanced_agents_fix.py  enhanced_input.py  enhanced_main.py  enhanced_stargazer.py  enhanced_ui.py  file_browser.py  gate.py  gateway.py  helix_bridge.py  init_cmd.py  install_grok_hooks.py  main.py  message.md  ollama_agent.py  policy.py  principles.py  ranking.py  review.py  rules.py  sandbox.py  secrets.py  self_correction.py  shell_guard.py  temple_floor.py  theme.py  tools.py  ui.py  ui_enhanced.py
cosmic_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: COSMIC-ALLOW-RFC-v1.1.md  EXECUTION_PLAN.md  GROK_BUILD_TREE_HEAD  SEAM_CONTRACT.md  THEORETICAL_BACKGROUND.md
docs/paper/: cosmic-allow-paper.md
proofs/: stargazer-pilot.txt
scripts/: cosmic-launch-grok.sh  friction_matrix.py  grok-sandbox-temple.toml.example  helix_rpc.js  rollback.sh  snapshot-release.sh  verify-linux-floor.sh  wrapper_e2e.py
scripts/hooks/: cosmic-gate-wrapper.sh  cosmic-pretooluse.json.template
tests/: README.md  __init__.py  test_boot_canary_wrapper.py  test_bounded_self_correction.py  test_build_identity.py  test_buildinfo.py  test_checkpoint.py  test_conformance.py  test_consciousness_framework.py  test_cosmic_cli.py  test_dashboard_guard.py  test_enhanced_features.py  test_gate_verb.py  test_helix_bridge.py  test_init.py  test_local_policy_gate.py  test_main_cli.py  test_mutation_binding.py  test_policy_kernel.py  test_privilege_ranking.py  test_review.py  test_secrets.py  test_self_correction.py  test_seven_gates.py  test_shell_guard.py  test_temple_floor.py  test_token_stateful.py  test_tools.py
tests/battery/: BATTERY.md  conftest.py  test_00_environment.py  test_10_sentinel.py  test_20_ranking_and_token.py  test_30_wrapper_and_deploy.py
tests/consciousness/: test_consciousness_metrics.py
tests/performance/: test_real_time_detection_performance.py
tests/scenarios/: __init__.py
