[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-cli"
version = "0.8.2"
description = "Temple runtime avionics: Grok Stargazer, T2Helix memory, policy kernel + action gateway"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Anthony Vasquez Sr.", email = "anthony@templetwo.com"}
]
license = {text = "MIT"}
keywords = [
  "cli",
  "agent",
  "grok",
  "xai",
  "t2helix",
  "temple",
  "avionics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
  "click>=8.1",
  "python-dotenv>=1.0",
  "xai-sdk>=1.0",
  "rich>=13.0",
  "pyfiglet>=1.0",
  "textual>=0.40",
  "requests>=2.31",
]
[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio",
  "pytest-cov",
]
[project.urls]
Homepage = "https://github.com/templetwo/cosmic-cli"
Repository = "https://github.com/templetwo/cosmic-cli"
Issues = "https://github.com/templetwo/cosmic-cli/issues"
[project.scripts]
cosmic-cli = "cosmic_cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cosmic_cli*"]
exclude = ["_archive*", "tests*", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q --strict-markers --ignore=_archive"
markers = [
  "unit: unit tests",
  "integration: integration tests",
]
