[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-cli"
dynamic = ["version"]
description = "Temple runtime avionics: Grok Stargazer, T2Helix memory, policy kernel + action gateway"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Anthony Vasquez Sr.", email = "anthony@templetwo.com"}
]
license = {text = "Apache-2.0"}
keywords = [
  "cli",
  "agent",
  "grok",
  "xai",
  "t2helix",
  "temple",
  "avionics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
  "click>=8.1",
  "python-dotenv>=1.0",
  "xai-sdk>=1.0",
  "rich>=13.0",
  "pyfiglet>=1.0",
  "textual>=0.40",
  "requests>=2.31",
]
[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio",
  "pytest-cov",
  "hypothesis>=6.100",
]
[project.urls]
Homepage = "https://github.com/templetwo/cosmic-cli"
Repository = "https://github.com/templetwo/cosmic-cli"
Issues = "https://github.com/templetwo/cosmic-cli/issues"
[project.scripts]
cosmic-cli = "cosmic_cli.main:cli"

# One version, one place. setuptools reads this attribute by static AST parse,
# so cosmic_cli/__init__.py is never executed at build time and the heavy
# relative imports at the top of it cost nothing here.
[tool.setuptools.dynamic]
version = {attr = "cosmic_cli.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["cosmic_cli*"]
exclude = ["_archive*", "tests*", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q --strict-markers --ignore=_archive"
markers = [
  "unit: unit tests",
  "integration: integration tests",
]
